# fynbus-chronicle

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.sqlite.yml  docker-compose.yml  fynbus  manage.py  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: ci_cd.yml
apps/accounts/: admin.py  apps.py  context_processors.py  models.py  permissions.py  signals.py  urls.py  views.py
apps/accounts/migrations/: 0001_create_viewer_group.py  (+1 more)
apps/dashboard/: apps.py  urls.py  views.py
apps/logbook/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/oncall/: admin.py  apps.py  models.py  urls.py  views.py
apps/tasks/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
chronicle/: context_processors.py  urls.py  wsgi.py
chronicle/email_backends/: __init__.py  graph.py
chronicle/settings/: base.py  dev.py  prod.py
docker/: Dockerfile  Dockerfile.dev  Dockerfile.sync  entrypoint.sh
docs/: DEPLOYMENT.md  DEVELOPMENT.md  GRAPH_EMAIL_SETUP.md  SETUP.md  SSO_SETUP.md  TASKS.md  USER_GUIDE.md
requirements/: base.txt  dev.txt  prod.txt
scripts/: update_docker_compose.py
static/css/: pdf_styles.css
static/src/: input.css
templates/: 403.html  base.html
templates/accounts/: login.html
templates/components/: footer.html  nav.html  theme_toggle.html
templates/dashboard/: index.html
templates/logbook/: weeklog_detail.html  weeklog_form.html  weeklog_list.html
templates/oncall/: calendar.html
templates/tasks/: task_detail.html  task_form.html  task_list.html
(+51 files in other folders)
